--- a/themes/jacman/_config.yml
+++ b/themes/jacman/_config.yml
@@ -126,9 +126,9 @@ google_cse:
 ## title: search
 ## ---
 baidu_search:     ## http://zn.baidu.com/
-  enable: false
+  enable: true
   id: 3642746597830030121  ## e.g. "783281470518440642"  for your baidu search id
-  site: http://zzming.com  ## your can change to your site instead of the default site
+  site: http://zhannei.baidu.com/cse/search  ## your can change to your site instead of the default site
   
 tinysou_search:     ## http://tinysou.com/
   enable: false
