--- a/_config.yml
+++ b/_config.yml
@@ -71,3 +71,7 @@ deploy:
   type: git
   repo: git@github.com:zzming/zzming.github.io.git
   branch: master
+
+search:
+  path: search.xml
+  field: post
