--- a/themes/jacman/_config.yml
+++ b/themes/jacman/_config.yml
@@ -86,7 +86,7 @@ links:
   QiuQuan's Blog: http://www.qiuquan.cc/
 
 #### Comment
-duoshuo_shortname:    ## e.g. wuchong   your duoshuo short name.
+duoshuo_shortname: zzming   ## e.g. wuchong   your duoshuo short name.
 disqus_shortname:     ## e.g. wuchong   your disqus short name.
 
 #### Share button
